[gd_scene load_steps=3 format=3 uid="uid://cffwcdg1os86r"]

[ext_resource type="Script" path="res://GameplayElementsScenes/hud.gd" id="1_8wy46"]
[ext_resource type="Texture2D" uid="uid://crdw3doxlp52" path="res://art/heart_animated_1.png" id="2_kv8qm"]

[node name="HUD" type="Node2D"]
script = ExtResource("1_8wy46")

[node name="IHATEGODOTINITNALIZATION" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="curMag" type="Label" parent="."]
offset_left = 582.0
offset_top = 321.0
offset_right = 595.0
offset_bottom = 344.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
text = "6
"

[node name="ReloadText" type="Label" parent="."]
visible = false
offset_left = 542.0
offset_top = 326.0
offset_right = 637.0
offset_bottom = 349.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
text = "Reloading...."

[node name="Slash" type="Label" parent="."]
offset_left = 599.0
offset_top = 327.0
offset_right = 639.0
offset_bottom = 350.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
text = "/
"

[node name="resAmmo" type="Label" parent="."]
offset_left = 610.0
offset_top = 333.0
offset_right = 635.0
offset_bottom = 356.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
text = "24
"

[node name="Heart1" type="Sprite2D" parent="."]
position = Vector2(586.5, 312.5)
texture = ExtResource("2_kv8qm")
hframes = 5

[node name="Heart2" type="Sprite2D" parent="."]
position = Vector2(603.5, 312.5)
texture = ExtResource("2_kv8qm")
hframes = 5

[node name="Heart3" type="Sprite2D" parent="."]
position = Vector2(620.5, 312.5)
texture = ExtResource("2_kv8qm")
hframes = 5

[connection signal="timeout" from="IHATEGODOTINITNALIZATION" to="." method="_on_ihategodotinitnalization_timeout"]
